# materials-project-helper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/instructions/: python-type-annotations.instructions.md
src/materials_project_helper/: __init__.py  api.py  config.py  materials.py
src/mp_helper/: __init__.py  api.py  config.py  materials.py
tests/: test_config.py  test_materials.py  test_searcher.py
