[project]
name = "materials-project-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "singularitti", email = "singularitti@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mp-api>=0.40",
]

[project.scripts]
materials-project-helper = "materials_project_helper:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=8.38.0",
]
